// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storyshots Chapter Chapter with props 1`] = `
<div
  class="h-full"
>
  <ul
    class="nav-chapters bg-primary text-white el-menu"
    role="menubar"
  >
    <li
      aria-expanded="true"
      aria-haspopup="true"
      class="menu-chapter el-submenu is-opened"
      role="menuitem"
    >
      <div
        class="el-submenu__title"
        style="padding-left: 20px;"
      >
        <span
          class="text-white hover:text-primary"
        >
          
        Premier chapitre
      
        </span>
        <i
          class="el-submenu__icon-arrow el-icon-arrow-down"
        />
      </div>
      <ul
        class="el-menu el-menu--inline"
        role="menu"
      >
         
        <li
          class="el-menu-item submenu-pages bg-primary text-white hover:text-primary"
          role="menuitem"
          style="padding-left: 40px;"
          tabindex="-1"
        >
          <a
            class="mock-link submenu-item-page block h-full"
          >
            Première page
      
          </a>
        </li>
        <li
          class="el-menu-item submenu-pages bg-primary text-white hover:text-primary"
          role="menuitem"
          style="padding-left: 40px;"
          tabindex="-1"
        >
          <a
            class="mock-link submenu-item-page block h-full"
          >
            Deuxième page
      
          </a>
        </li>
      </ul>
    </li>
    <li
      aria-expanded="true"
      aria-haspopup="true"
      class="menu-chapter el-submenu is-opened"
      role="menuitem"
    >
      <div
        class="el-submenu__title"
        style="padding-left: 20px;"
      >
        <span
          class="text-white hover:text-primary"
        >
          
        Deuxième chapitre
      
        </span>
        <i
          class="el-submenu__icon-arrow el-icon-arrow-down"
        />
      </div>
      <ul
        class="el-menu el-menu--inline"
        role="menu"
      >
         
        <li
          class="el-menu-item submenu-pages bg-primary text-white hover:text-primary"
          role="menuitem"
          style="padding-left: 40px;"
          tabindex="-1"
        >
          <a
            class="mock-link submenu-item-page block h-full"
          >
            Troisième page
      
          </a>
        </li>
        <li
          class="el-menu-item submenu-pages bg-primary text-white hover:text-primary"
          role="menuitem"
          style="padding-left: 40px;"
          tabindex="-1"
        >
          <a
            class="mock-link submenu-item-page block h-full"
          >
            Quatrième page
      
          </a>
        </li>
      </ul>
    </li>
  </ul>
</div>
`;

exports[`storyshots Chapter Chapter without props 1`] = `
<div
  class="h-full"
>
  <ul
    class="nav-chapters bg-primary text-white el-menu"
    role="menubar"
  >
    <li
      aria-expanded="true"
      aria-haspopup="true"
      class="menu-chapter el-submenu is-opened"
      role="menuitem"
    >
      <div
        class="el-submenu__title"
        style="padding-left: 20px;"
      >
        <span
          class="text-white hover:text-primary"
        >
          
        Aucun chapitre à afficher
      
        </span>
        <i
          class="el-submenu__icon-arrow el-icon-arrow-down"
        />
      </div>
      <ul
        class="el-menu el-menu--inline"
        role="menu"
      />
    </li>
  </ul>
</div>
`;
